# rustpp

./: -D  -o  .gitattributes  .gitignore  .lsp.json  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  bench-history.csv  cc5_macho  cc5_macho_b.err  cyrius.cyml  cyrius.toml
benches/: bench_alloc.cyr  bench_capacity_overhead.sh  bench_float.cyr  bench_fmt.bcyr  bench_fmt.cyr  bench_freelist.bcyr  bench_hashmap.cyr  bench_interning.bcyr  bench_keccak.bcyr  bench_mulmod.bcyr  bench_regalloc.bcyr  bench_shortcircuit.bcyr  bench_str.bcyr  bench_string.bcyr  bench_switch.bcyr  bench_tagged.bcyr  bench_vec.cyr
bootstrap/: SHA256SUMS  asm  asm.cyr  asm_stage1f_tmp  bootstrap.sh  cyrc.cyr  verify.sh
cbt/: build.cyr  commands.cyr  core.cyr  cyrius.cyr  deps.cyr  project.cyr  pulsar.cyr  quality.cyr
docs/: api-surface.snapshot  benchmarks.md  cyrius-guide.md  editor-integration.md  faq.md  language-development-notes.md  size-comparisons.md  stdlib-reference.md  tutorial.md
editors/: neovim.lua
fuzz/: freelist.fcyr  hashmap.fcyr  str_coerce.fcyr  string.fcyr  vec.fcyr
kernel/: agnos.cyr  serial32.cyr
lib/: agnosys.cyr  alloc.cyr  alloc_macos.cyr  audio.cyr  bench.cyr  bigint.cyr  cffi.cyr  chrono.cyr  cyml.cyr  dynlib.cyr  fdlopen.cyr  flags.cyr  (+48 more)
seed/: Cargo.toml
seed/benches/: assembler.rs
seed/examples/: bitwise.cyr  byteops.cyr  conditionals.cyr  exit42.cyr  functions.cyr  loop.cyr  shifts.cyr
seed/src/: elf.rs  encode.rs  error.rs  lib.rs  main.rs  parse.rs  token.rs
seed/tests/: integration_tests.rs  unit_tests.rs
(+565 files in other folders)
