[package]
name = "cyrius-seed"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Cyrius stage 0 — minimal assembler that emits x86_64 ELF binaries"

[[bin]]
name = "cyrius-seed"
path = "src/main.rs"

[lib]
name = "cyrius_seed"
path = "src/lib.rs"

[[bench]]
name = "assembler"
harness = false

[dev-dependencies]
